--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Rae's Super Cool Test Site!</title>
+    <script type="text/javascript">   
+        window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=document.createElement("script");r.type="text/javascript",r.async=!0,r.src="https://cdn.heapanalytics.com/js/heap-"+e+".js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(r,a);for(var n=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","resetIdentity","removeEventProperty","setEventProperties","track","unsetEventProperty"],o=0;o<p.length;o++)heap[p[o]]=n(p[o])};   
+        heap.load("547940581"); 
+        </script>
 </head>
 <body>
     <h1>This is a Test Site!</h1>
+    <!-- A button for a click event -->
+    <!-- A space for an identify call -->
+    <!-- A space for an aUP call -->
+    <!-- A space for a heap.track call -->
     <script src="scripts.js"></script>
 </body>
 </html>
