--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 <body>
     <h1>This is a Test Site!</h1>
     <!-- A button for a click event -->
+    <button type="button" class="eventButtons" id="autoEventButton">Click Here!</button>
     <!-- A space for an identify call -->
+    <form>
+        <label for="fname">IDENTIFY YOURSELF!</label>
+        <input type="text" id="identifyValue" name="identifyValue"><br><br>
+        <button type="submit" id="identifyButton" class="eventButtons" value="Submit">Submit</button>
+      </form>
     <!-- A space for an aUP call -->
     <!-- A space for a heap.track call -->
     <script src="scripts.js"></script>
