added some divs and whatnot

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
         <input type="text" id="identifyValue" name="identifyValue"><br><br>
         <button type="submit" id="identifyButton" class="eventButtons" value="Submit">Submit</button>
       </form>
-    <!-- A space for an aUP call -->
-    <!-- A space for a heap.track call -->
+    <div class="container border" style="margin: 12%;">
+        <span id="secretSpan" class="invisible" data-site="search" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+            <a href="http://www.google.com" target="blank">Google Stuff Here!</a>
+        </span>
+    </div>
+
+    <div class="container" id="superCoolDiv"></div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
+
