--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <a href="http://www.google.com" target="blank">Google Stuff Here!</a>
         </span>
     </div>
+    <div class="container"> 
+        <p id="field1" data-fakessn="551325553"> Kevin Tran </p> 
+        <p id="field2" data-phone="5109403992"> 5109403992 </p>
+     </div>
 
     <div class="container" id="superCoolDiv"></div>
 
@@ -33,3 +37,4 @@
 </body>
 </html>
 
+<!-- todo: implement heap-redact, test wildcard class event definitons in HoH, funnel questions, third customer empathy question -->
