--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="http://www.google.com" target="blank">Google Stuff Here!</a>
         </span>
     </div>
-    <div class="container"> 
+    <div class="container" data-heap-redact-attributes='data-fakessn,data-phone' data-heap-redact-text> 
         <p id="field1" data-fakessn="551325553"> Kevin Tran </p> 
         <p id="field2" data-phone="5109403992"> 5109403992 </p>
      </div>
@@ -37,4 +37,4 @@
 </body>
 </html>
 
-<!-- todo: implement heap-redact, test wildcard class event definitons in HoH, funnel questions, third customer empathy question -->
+<!-- todo: implement heap-redact, third customer empathy question -->
