--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h1>This is a Test Site!</h1>
     <!-- A button for a click event -->
     <button type="button" class="eventButtons" id="autoEventButton">Click Here!</button>
+    <a href="https://technite.github.io/"> Daniel's site </a>
     <!-- A space for an identify call -->
     <form>
         <label for="fname">IDENTIFY YOURSELF!</label>
