--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
     <div class="container" id="superCoolDiv"></div>
 
+    <div id="contentChangeTest" contenteditable="true"></div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
