--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="container" id="superCoolDiv"></div>
 
-    <div id="contentChangeTest" contenteditable="true"></div>
+    <div id="contentChangeTest" contenteditable="true">Write Stuff Here</div>
 
     <script src="scripts.js"></script>
 </body>
