--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Rae's Super Cool Test Site!</title>
+    <!-- CS Installation -->
+    <script type="text/javascript">
+(function () {
+  window._uxa = window._uxa || [];
+  if (typeof CS_CONF === 'undefined') {
+    window._uxa.push(['setPath', window.location.pathname + window.location.hash.replace('#', '?__')]);
+    var mt = document.createElement("script");
+    mt.type = "text/javascript";
+    mt.async = true;
+    mt.src = "//t.contentsquare.net/uxa/2c5142b15f133.js";
+    document.getElementsByTagName("head")[0].appendChild(mt);
+  } else {
+    window._uxa.push(['trackPageview', window.location.pathname + window.location.hash.replace('#', '?__')]);
+  }
+})();
+</script>
     <!-- HJ Installation -->
     <!-- Hotjar Tracking Code for https://rgregg2014.github.io/heaptestenv/ -->
 <script>
